--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bluebird": "^2.9.12",
     "body-parser": "^1.12.0",
     "express": "^4.12.0",
+    "helmet": "^0.6.1",
     "jade": "^1.9.2",
     "mongoose": "^3.8.24"
   },
