--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bluebird": "^2.9.12",
     "body-parser": "^1.12.0",
+    "csurf": "^1.7.0",
     "express": "^4.12.0",
     "helmet": "^0.6.1",
     "jade": "^1.9.2",
