--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.12.0",
     "csurf": "^1.7.0",
     "express": "^4.12.0",
+    "express-session": "^1.10.3",
     "helmet": "^0.6.1",
     "jade": "^1.9.2",
     "mongoose": "^3.8.24"
