--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bluebird": "^2.9.12",
     "body-parser": "^1.12.0",
     "csurf": "^1.7.0",
+    "elasticsearch": "^3.1.3",
     "express": "^4.12.0",
     "express-session": "^1.10.3",
     "helmet": "^0.6.1",
