--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bluebird": "^2.9.12",
     "body-parser": "^1.12.0",
+    "cookie-parser": "^1.3.4",
     "csurf": "^1.7.0",
     "elasticsearch": "^3.1.3",
     "express": "^4.12.0",
@@ -18,6 +19,7 @@
     "helmet": "^0.6.1",
     "jade": "^1.9.2",
     "mongoose": "^3.8.24",
+    "node-rest-client": "^1.4.4",
     "stylus": "^0.50.0"
   },
   "devDependencies": {
