--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "workspace",
-  "version": "1.0.0",
-  "description": "A generic NodeJS implementation",
+  "name": "Generic NodeJS App",
+  "version": "0.0.2",
+  "description": "A1 generic NodeJS implementation",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,14 +13,12 @@
     "body-parser": "^1.12.0",
     "cookie-parser": "^1.3.4",
     "csurf": "^1.7.0",
-    "elasticsearch": "^3.1.3",
     "express": "^4.12.0",
     "express-session": "^1.10.3",
     "helmet": "^0.6.1",
     "jade": "^1.9.2",
     "mongoose": "^3.8.24",
-    "node-rest-client": "^1.4.4",
-    "stylus": "^0.50.0"
+    "node-rest-client": "^1.4.4"
   },
   "devDependencies": {
     "bower": "^1.3.12",
