--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "helmet": "^0.6.1",
     "jade": "^1.9.2",
     "mongoose": "^3.8.24",
-    "node-rest-client": "^1.4.4"
+    "node-rest-client": "^1.4.4",
+    "pg": "^4.3.0"
   },
   "devDependencies": {
     "bower": "^1.3.12",
