--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "jquery": "~2.1.3",
     "angular": "~1.3.14",
     "bootstrap": "~3.3.2",
-    "angular-resource": "~1.3.14"
+    "angular-resource": "~1.3.14",
+    "highcharts-release": "*"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.14"
