--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "angular": "~1.3.14",
     "bootstrap": "~3.3.2",
     "angular-resource": "~1.3.14",
+    "angular-route": "~1.3.14",
     "highcharts-release": "*"
   },
   "devDependencies": {
