--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "bootstrap": "~3.3.2",
     "angular-resource": "~1.3.14",
     "angular-route": "~1.3.14",
-    "highcharts-release": "*"
+    "highcharts-release": "*",
+    "d3": "~3.5.5"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.14"
